i will need to event sourcing to solve this problem